=== SVN

* Implemented Model#pk_hash. Is it really necessary?

* Deprecated Model#pkey. Implemented better Model#pk method.

* Specs and docs for Model.one_to_one, Model.one_to_many macros.

=== 0.3.0.1 (2007-10-20)

* Changed Database#fetch to return a modified dataset.

=== 0.3 (2007-10-20)

* Added stock transforms to Dataset#transform. Refactored Model.serialize.

* Added Database#logger= method for setting the database logger object.

* Fixed Model.[] to act as shortcut to Model.find when a hash is given (#71).

* Added support for old and new decimal types in MySQL adapter, and updated MYSQL_TYPES with MySQL 5.0 constants (#72).

* Implemented Database#disconnect method for all adapters.

* Fixed small bug in ArrayKeys module.

* Implemented model caching by primary key.

* Separated Model.find and Model.[] functionality. Model.find takes a filter. Model.[] is strictly for finding by primary keys.

* Enhanced Dataset#first to accept a filter block. Model#find can also now accept a filter block.

* Changed Database#[] to act as shortcut to #fetch if a string is given.

* Renamed Database#each to #fetch. If no block is given, the method returns an enumerator.

* Changed Dataset#join methods to correctly literalize values in join conditions (#70).

* Fixed #filter with ranges to correctly literalize field names (#69).

* Implemented Database#each method for quickly retrieving records with arbitrary SQL (thanks Aman Gupta).

* Fixed bug in postgres adapter where a LiteralString would be literalized as a regular String.

* Fixed SQLite insert with subquery (#68).

* Reverted back to hashes as default mode. Added Sequel.use_array_tuples and Sequel.use_hash_tuples methods.

* Fixed problem with arrays with keys when using #delete.

* Implemented ArrayKeys as substitute for ArrayFields.

* Added Dataset#each_hash method.

* Rewrote SQLite::Database#transaction to use sqlite3-ruby library implementation of transactions.
